--- a/1_Hardware-Components.ipynb
+++ b/1_Hardware-Components.ipynb
@@ -5,22 +5,31 @@
    "metadata": {},
    "source": [
     "# Learning Robotics on the Jetson TX2\n",
-    "- Required components\n",
-    "- Communication with the Jetson\n",
-    " - GPIO\n",
-    " - I2C\n",
-    "- Wiring diagram and assembly instructions\n",
-    "- Code breakdown\n",
     "\n",
-    "In this part of the session, you will learn about different hardware components, including LEDs, buttons, and servo motors, how to assemble them for this project, and two different ways that hardware can interface with the Jetson.\n",
+    "In this session, you will be using the Jetson TX2 to control a robot arm. This robot arm will interact with a panel of buttons and LEDs. \n",
+    "This session will be broken into two main parts: ***prepare and test your hardware***: take control of the arm, leds and buttons with the Jetson, and then ***add reinforcement learning*** to teach this robot to play a game. \n",
     "\n",
-    "This notebook contains extra background information on each component and communication method that is not required to complete this project, but it is here for your reference and interest. "
+    "In this first part of the session, you will learn about different hardware components, including LEDs, buttons, and servo motors, how to assemble them for this project, and two different ways that hardware can interface with the Jetson.\n",
+    "\n",
+    "This part of the notebook contains some extra background information on each component and communication method that is not required to complete this project, but it is here for your reference and interest. \n",
+    "\n",
+    "\n",
+    "- Step 1: [Required components](#breadboard)\n",
+    "- Step 2: [Wiring diagram and assembly instructions](#instructions)\n",
+    "\n",
+    "- Step 2 : Communication with the Jetson\n",
+    " - [GPIO](#gpio)\n",
+    " - [I2C](#i2c)\n",
+    "- Step 3: [Testing](#testing)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='breadboard'></a>\n",
     "## Breadboard \n",
     "For this project you’ll need a full size solderless breadboard so that you can reuse the components. In a breadboard like the one shown below, the + and - “rails” are internally connected. The interior numbered groups are also internally connected.\n",
     "\n",
@@ -42,7 +51,7 @@
    "metadata": {},
    "source": [
     "## Light-Emitting Diodes (LEDs)\n",
-    "For this project, we will be using four 10mm LEDs. LEDs have an anode and cathode, and the wires connected to them for this project are colour coded (red is positive and black is negative). It is important to plug in an LED in the correct orientation, as diodes only work in one direction. So keep an eye on this colour coding in the wiring diagram in the steps below.\n",
+    "For this project, we will be using four 10mm LEDs. LEDs have an anode (the long lead of the LED) and cathode(the short lead of the LED), and the wires connected to them for this project are colour coded (red is positive and black is negative). ***It is important to plug in an LED in the correct orientation, as diodes only work in one direction. So keep an eye on this colour coding in the wiring diagram in the steps below.***\n",
     "\n",
     "LEDs can blow if the circuit has not been connected properly and too much current is put through the LED, which is why we will use resistors in the LED circuit.\n",
     "\n",
@@ -59,7 +68,7 @@
    "source": [
     "## Resistors \n",
     "\n",
-    "Resistors are needed in a circuit to divide the voltage of a circuit and to control the current flow. If we just hook an LED up to a power source it will fail because the current going through it will be too high. However, if we put a resistor in series with the LED in the circuit, we can control the value of the current and the LED will work. We’ll also need one for our transistor switch,  and another for our button circuit The value of resistor or resistors that you need varies depending on your other specific circuit components. You can identify the value of the resistor based on the colour coded stripes, which you will be able to see in the wiring diagram provided.\n",
+    "Resistors are needed in a circuit to divide the voltage of a circuit and to control the current flow. We'll need resistors for the LED circuits, the transistor switch, and another for the button circuit. The value of resistor or resistors that you need varies depending on your other specific circuit components. You can identify the value of the resistor based on the colour coded stripes, which you will be able to see in the wiring diagram provided.\n",
     "\n",
     "![Resistors](images/image8.png)\n",
     "\n",
@@ -118,8 +127,11 @@
     "![Servo motor](images/image4.png)\n",
     "\n",
     "**Additional Resources:**\n",
+    "\n",
     "https://learn.sparkfun.com/tutorials/hobby-servo-tutorial\n",
+    "\n",
     "https://learn.sparkfun.com/tutorials/pulse-width-modulation\n",
+    "\n",
     "https://www.jameco.com/jameco/workshop/howitworks/how-servo-motors-work.html"
    ]
   },
@@ -132,8 +144,6 @@
     "Unfortunately we can’t use the PWM GPIO pins on the Jetson to control the servos. This is because PWM requires precise clock and refresh, which is’t something that the Jetson can do very well - considering it is also running a non real-time operating system.\n",
     "Using I2C (only two command pins) , which we will discuss further later, the breakout board can control 16 free-running PWM outputs. The SparkFun Pi Servo HAT allows control of up to 16 servo motors using an I2C connection.\n",
     "\n",
-    "Power to the SparkFun Pi Servo HAT is supplied by a microUSB connector that can be used to power the servo motors.\n",
-    "\n",
     "We will learn about the code to communicate with this board using I2C later in this project.\n",
     "\n",
     "![PWM Driver - Servo Hat](images/image10.png)"
@@ -143,23 +153,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='instructions'></a>\n",
+    "\n",
     "## Wiring Diagram and Assembly Instructions\n",
     "\n",
-    "**Step 1**: Stack the red PWM Servo board on to the J21 Header of the TX2.\n",
+    "**Step 1**: Read all of the assembly instructions and look at all images before starting! Please ask an instructor or TA for assistance if anything is unclear. \n",
     "\n",
-    "**Step 2**: Wire the LEDs and buttons to the TX2 as shown in the wiring diagram below.\n",
-    "\n",
-    "**Step 3**: Make sure your Jetson is powered down before starting your wiring, and triple check it before turning on!  \n",
-    "\n",
+    "**Step 2**: Wire the LEDs and buttons to the Jetson as shown in the wiring diagram below. Instead of wiring directly to the Jetson's J21 header, we will be wiring to the Sparkfun Servo HAT header **not** plugged in to the board. This is for the board's safety, and will give you a chance to check your wiring before proceeding with plugging the Servo HAT into the Jetson. Please  see the photos below for proper orientation of the Servo HAT relative to the Jetson headers and the wiring diagram.\n",
     "![Jetson](images/jetson3.jpg)\n",
     "\n",
-    "![Wiring diagram](images/image3.jpg)"
+    "![Wiring diagram](images/image3.jpg)\n",
+    "\n",
+    "![Jetson](images/jetson5.jpg)\n",
+    "\n",
+    "**Step 3**: CHECK AND DOUBLE CHECK YOUR WIRING. Especially any wires that are coloured red or black in the diagram.\n",
+    "\n",
+    "**Step 4** Stack the red PWM Servo board on to the J21 Header of the TX2.\n",
+    "![Jetson](images/jetson1.jpg)\n",
+    "\n",
+    "![Jetson](images/jetson2.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='gpio'></a>\n",
+    "\n",
     "## Communication With the Jetson: GPIO\n",
     "\n",
     "General Purpose Input/Output (GPIO) is a basic form of communicating with pins to turn them on or off, or read the state of the pin. When configured as an input, the pin can be queried and it will return a 1 or 0. When configured as an output, the pin can be set to either 1 or 0.\n",
@@ -216,12 +236,13 @@
     "\n",
     "## GPIO library\n",
     "\n",
-    "Now that you understand how GPIO pins are controlled, we will be using a Python library called GPIO for our code. This library provides gpio access via the standard linux [sysfs interface](https://www.kernel.org/doc/Documentation/gpio/sysfs.txt)\n",
+    "Now that you understand how GPIO pins are controlled, we will be using a Python library called gpio for our code. This library provides GPIO access via the standard linux [sysfs interface](https://www.kernel.org/doc/Documentation/gpio/sysfs.txt)\n",
     "\n",
     "**Additional Resources:**\n",
     "\n",
     "https://pypi.python.org/pypi/gpio/0.2.0\n",
     "\n",
+    "<a id='i2c'></a>\n",
     "\n",
     "## Communication With the Jetson: I2C\n",
     "\n",
@@ -232,7 +253,7 @@
     "\n",
     "I2C protocol uses device addresses to coordinate devices and traffic on the data line.\n",
     "\n",
-    "In most OS level interactions, the I2C bus is referred to as SMBus. We will use the Python library smbus to create SMBus object and attach it to a bus on the Jetson. We will need to tell the program the servo hat’s I2C address, which is 0x40 by default. We will enable the PWM chip, and write values to the PWM registers to assign a start time and stop time to the servo hat channels. Each channel on the servo hat controls one single servo, and eachof these channels has a unique start and stop address to write values to. The start time and stop time determine when the pulse of the PWM goes high and low. The control signal of the servo is taken from this pulse width.\n",
+    "In most OS level interactions, the I2C bus is referred to as SMBus. We will use the Python library smbus to create SMBus object and attach it to a bus on the Jetson. We will need to tell the program the servo hat’s I2C address, which is 0x40 by default. We will enable the PWM chip, and write values to the PWM registers to assign a start time and stop time to the servo hat channels. Each channel on the servo hat controls one single servo, and each of these channels has a unique start and stop address to write values to. The start time and stop time determine when the pulse of the PWM goes high and low. The control signal of the servo is taken from this pulse width.\n",
     "\n",
     "For this project, we will be using two servo motors. See the table below for the start and stop addresses for channel 0 and 1 of the servo hat, which you will see used in the code.\n",
     "\n",
@@ -241,12 +262,48 @@
     "Ch 0 | 0x06 | 0x08\n",
     "Ch 1 | 0x0A | 0x0C\n",
     "\n",
-    "If you write a 0 to the start address, every degree of offset from 90 degrees requires 4.6 counts written to the stop address. In other words, multiply the number of degrees offset from neutral you wish to achieve by 4.6, then either add or subtract that result from 1250, depending on the direction of motion you wish. For example, a 45 degree offset from center would be 207 (45x4.6) counts either more or less than 1250, depending upon the direction you desire the motion to be in.\n",
+    "From the Servo HAT documentation: \"If you write a 0 to the start address, every degree of offset from 90 degrees requires 4.6 counts written to the stop address. In other words, multiply the number of degrees offset from neutral you wish to achieve by 4.6, then either add or subtract that result from 1250, depending on the direction of motion you wish. For example, a 45 degree offset from center would be 207 (45x4.6) counts either more or less than 1250, depending upon the direction you desire the motion to be in.\"\n",
     "\n",
     "**Additional Resources:**\n",
     "\n",
     "https://learn.sparkfun.com/tutorials/i2c"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='testing'></a>\n",
+    "## Testing Your Wiring and Calibration of Your Robot Arm\n",
+    "\n",
+    "Download gtc_arm.py on your Jetson, and run using:\n",
+    "\n",
+    "```\n",
+    "sudo python gtc_arm.py\n",
+    "```\n",
+    "\n",
+    "Each light should turn on, one at a time from left to right. Once the first light turns on, the arm will turn to that position, and it will attempt to press the button. If the button is pressed, the light should turn off. This will repeat for each light/ button combo. \n",
+    "\n",
+    "If one (or more) of the lights does not turn on - check your wiring.\n",
+    "\n",
+    "If the button is successfully pressed by the arm but the light does not turn off - check your wiring. \n",
+    "\n",
+    "If the arm misses the button - calibrate the position the base servo turns to. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: link to next notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
