--- a/1_Hardware-Components.ipynb
+++ b/1_Hardware-Components.ipynb
@@ -16,13 +16,10 @@
     "\n",
     "- Step 1: [Required components](#breadboard)\n",
     "- Step 2: [Wiring diagram and assembly instructions](#instructions)\n",
-    "\n",
-    "- Step 2 : Communication with the Jetson\n",
+    "- Step 3: Communication with the Jetson\n",
     " - [GPIO](#gpio)\n",
     " - [I2C](#i2c)\n",
-    "- Step 3: [Testing](#testing)\n",
-    "\n",
-    "\n"
+    "- Step 4: [Testing](#testing)"
    ]
   },
   {
@@ -276,7 +273,7 @@
     "<a id='testing'></a>\n",
     "## Testing Your Wiring and Calibration of Your Robot Arm\n",
     "\n",
-    "Download gtc_arm.py on your Jetson, and run using:\n",
+    "Download **gtc_arm.py** and **jetson_env.py** on your Jetson, and run using:\n",
     "\n",
     "```\n",
     "sudo python gtc_arm.py\n",
@@ -288,22 +285,17 @@
     "\n",
     "If the button is successfully pressed by the arm but the light does not turn off - check your wiring. \n",
     "\n",
-    "If the arm misses the button - calibrate the position the base servo turns to. "
+    "If the arm misses the button - calibrate the position the base servo turns to. \n",
+    "\n",
+    "Once the test code runs successfully, you are ready to move to the reinforcement learning component!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: link to next notebook"
+    "# Click on [Reinforcement Learning](https://render.githubusercontent.com/view/2_Reinforcement-Learning.ipynb) to go to the next step."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -323,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
