--- a/2_Reinforcement-Learning.ipynb
+++ b/2_Reinforcement-Learning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Reinforcement Learning with NVIDIA Jetson TX2\n",
+    "# Learning Robotics on the Jetson TX2\n",
     "\n",
     "In this session, you will use a branch of machine learning called **reinforcement learning** to teach a robot to play a game.\n",
     "\n",
@@ -13,7 +13,8 @@
     "- Step 2: [Motivating Reinforcement Learning](#motivatingrl)\n",
     "- Step 3: [Investigate Random Behavior](#random)\n",
     "- Step 4: [States, Actions, and Optimal Policies](#policies)\n",
-    "- Step 5: [Monte Carlo with Exploring Starts](#mces)"
+    "- Step 5: [Monte Carlo with Exploring Starts](#mces)\n",
+    "- Step 6: [Watch your Agent Learn!](#watch)"
    ]
   },
   {
@@ -100,9 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from jetson_env import JetsonEnv\n",
@@ -154,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_led_and_arm(state, nLED=4):\n",
@@ -219,16 +216,20 @@
     "### A Central Idea\n",
     "\n",
     "As part of this method, the robot will maintain a numpy array `Q` with `16` rows and `3` columns.  \n",
-    "> The entry in the `s`-th row and `a`-th column (`Q[s,a]`) contains the robot's _**estimate**_ for the highest score it can possibly obtain in the game, if the game started in state `s`, and the robot selected action `a` for its first move.  \n",
+    "> The entry in the `s`-th row and `a`-th column (`Q[s,a]`) contains the robot's _estimate_ for the highest score it can possibly obtain in the game, if the game started in state `s`, and the robot selected action `a` for its first move.  \n",
     "\n",
     "For the first several games, the estimates in the array will be wildly inaccurate; but, the more experience the robot gets with gameplay, the more it is able to refine these estimates.\n",
     "\n",
-    "It is relatively straightforward to determine what these estimates _should_ be, _if_ they are completely accurate.  For instance, consider `Q[3,1]`.  This value corresponds to state `3`, which corresponds to the case where the game starts with the lit LED at position `0`, and the robotic arm is at position `3`.  If the robot selects action `1` as its first move in the game, then this corresponds to pushing in the current location, which results in a score of `-1`.  Then, at this point, if the robot plays optimally, it can obtain a final score of **at most** `-5`, obtained by selecting actions `0`, `0`, `0`, and `1` to end the game in four more moves.  The robot will try to estimate this value (`Q[3,1]=-5`), along with all other values in the array, from gameplay.  And - amazingly - it will refine these estimates while simultaneously trying to determine the optimal policy.  That is, it does not need to know the optimal policy *a priori* before forming these estimates!\n",
+    "It is relatively straightforward to determine what these estimates _should_ be, _if_ they are completely accurate.  These values are printed in the figure below, where you will notice a row for each state, and a column for each action.\n",
     "\n",
-    "This array is deeply connected to the optimal policy.  \n",
-    "> What's particularly worth noting is that in the event that we have a perfect estimate of all of the values in `Q`, we can quickly use it to obtain the optimal policy.  \n",
+    "![Q_array](images/Q_truth.png)\n",
     "\n",
-    "To see this, suppose for now that the robot has a perfect estimate of all of the entries in the `Q` array.  Then, it can get the corresponding optimal action corresponding to any state `s` simply by looking at the `s`-th row in `Q`, or `Q[s]`.  As an example, if `s=3`, then `Q[3]=[-4, -5, -5]`.  \n",
+    "For instance, consider `Q[3,1]`.  This value corresponds to state `3`, which corresponds to the case where the game starts with the lit LED at position `0`, and the robotic arm is at position `3`.  If the robot selects action `1` as its first move in the game, then this corresponds to pushing in the current location, which results in a score of `-1`.  Then, at this point, if the robot plays optimally, it can obtain a final score of **at most** `-5`, obtained by selecting actions `0`, `0`, `0`, and `1` to end the game in four more moves.  The robot will try to estimate this value (`Q[3,1]=-5`), along with all other values in the array, from gameplay.  \n",
+    "\n",
+    "This numpy array `Q` is deeply connected to the optimal policy.  To see this, note that:\n",
+    "> **_If the estimates in `Q` are completely accurate_**, then the entry in the `s`-th row and `a`-th column (`Q[s,a]`) contains the robot's final score, if the game starts in state `s`, the robot selects action `a` for its first move, and then selects all remaining moves by following the optimal policy. \n",
+    "\n",
+    "What's also particularly worth noting is that in the event that we have a perfect estimate of all of the values in `Q`, we can quickly use it to obtain the optimal policy.  To see this, suppose for now that the robot has a perfect estimate of all of the entries in the `Q` array.  Then, it can get the corresponding optimal action corresponding to any state `s` simply by looking at the `s`-th row in `Q`, or `Q[s]`.  As an example, if `s=3`, then `Q[3]=[-4, -5, -5]`.  \n",
     "> Then, to get the optimal action corresponding to state `s`, we need only select the action corresponding to the index that maximizes `Q[s]`.  \n",
     "\n",
     "In the case that `s=3`, we see that `-4` is the largest entry in `Q[s]` (which appears at index `0`), and so the optimal action is action `0` (which corresponds to action **L**eft).  This lines up with the optimal policy above!  \n",
@@ -237,7 +238,9 @@
     "LED: 0 | Arm: 3 | State:  3 | Best Action: L\n",
     "```\n",
     "\n",
-    "To understand more generally **_why_** this is the case, note that (_... still assuming that the robot has a perfect estimate for `Q` ..._) each entry in `Q[s]` contains the final score if the robot follows the optimal policy, for all moves except (potentially) the first.  Then, one of the three available first moves must be optimal, and it makes sense that the optimal move will correspond to the action (or index) that yields the largest value in `Q[s]`.  This fact will come in very useful in the next section, when we talk about how to implement the method in detail."
+    "To understand more generally **_why_** this is the case, note that (_... still assuming that the robot has a perfect estimate for `Q` ..._) each entry in `Q[s]` contains the final score if the robot follows the optimal policy, for all moves except (potentially) the first.  Then, one of the three available first moves must be optimal, and it makes sense that the optimal move will correspond to the action (or index) that yields the largest value in `Q[s]`.  This fact will come in very useful in the next section, when we talk about how to implement the method in detail.\n",
+    "\n",
+    "You will learn more about how the agent forms the estimates in `Q` in the upcoming sections.  Amazingly - the robot will refine these estimates while simultaneously trying to determine the optimal policy.  That is, it does not need to know the optimal policy *a priori* before forming these estimates!"
    ]
   },
   {
@@ -248,7 +251,7 @@
     "\n",
     "As we saw in the previous section, once the robot has perfected the estimates in the numpy array `Q`, it can quickly obtain the optimal policy.  In particular, for any game state `s` that the robot encounters, the best possible game move is identified as the index of the maximal entry in `Q[s]`.\n",
     "\n",
-    "> **_But now the question is_** ... how should the robot behave, if it is unsure about its estimates in `Q`?\n",
+    "> **_But now the question is_** ... how should the robot behave, if it is still unsure about its estimates in `Q`?\n",
     "\n",
     "To answer this question, we'll describe how a full game round should evolve.  In the **Monte Carlo with Exploring Starts** method, the robot will always follow the following procedure:\n",
     "1. At the beginning of any game round, the robot selects an action completely at random.  \n",
@@ -258,10 +261,10 @@
     "\n",
     "Then, precisely since `Q` is not yet perfect, it makes sense for the robot to also attempt a random move, to see if it can - by chance - find a play that exceeds its current expectations. \n",
     "\n",
-    "Your task is to complete the `play_round` function in the next code cell.  The function uses the estimates in `Q` to play a single game round, and it returns a list of `(state, action)` tuples, detailing how the game evolved.  Your implementation should replace these lines of code in the cell below:\n",
+    "**Your task is to complete the `play_round` function in the next code cell.**  The function uses the estimates in `Q` to play a single game round, and it returns a list of `(state, action)` tuples, detailing how the game evolved.  Your implementation should replace these lines of code in the cell below:\n",
     "```python\n",
     "# your code here\n",
-    "action = ...                                # select action from set of best actions\n",
+    "action = ...                                # select action from estimates in Q\n",
     "```\n",
     "\n",
     "Once you have completed your implementation, execute the code cell to see how the game evolved for three different rounds.  This will prove useful for debugging!  Each round will have corresponding output that looks somewhat like the snippet below:\n",
@@ -276,9 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -300,10 +301,7 @@
     "    # finish the round\n",
     "    while not done:\n",
     "        state = get_state(led, arm, env.nLED)   # get next game state\n",
-    "        \n",
-    "        # your code here\n",
-    "        action = ...                            # select action from set of best actions\n",
-    "        \n",
+    "        # your code here                        # select action from estimates in Q\n",
     "        arm, points, done = env.step(action)    # take action\n",
     "        game_round.append((state, action))      # save state and action\n",
     "    \n",
@@ -339,10 +337,14 @@
     "- After round `2`, `Q[15,0]` is set to **the average of `-4` and `-8`**, or `-6`.  \n",
     "- After round `3`, `Q[15,0]` is **the average of `-4`, `-8`, and `-6`**, or `-6`.\n",
     "\n",
-    "And note that these games can also be used to estimate the entries in `Q` corresponding to other state-action pairs.  For instance, consider `Q[14,1]`.  Even though round `1` did not technically start with state `14` and action `1`, the mini-round obtained by removing `(15, 0)` proves particularly useful for estimating `Q[14,1]`.  In particular, the mini-round `[(14, 1), (14, 2), (15, 1)]` shows that after the robot selected action `1` when the game was in state `14`, the robot effectively received a final score of `-3`.\n",
+    "> We will refer to the sum of the points obtained after a state-action pair `(s, a)` as the **return**.  \n",
     "\n",
-    "Before describing the algorithm in full, it is necessary to talk about what should happen in the event that the same state-action pair appears in a round multiple times.  For instance, consider `(13, 0)` in round `2`.  Should we use a \"final score\" of `-6` (taken from the first occurrence of `(13, 0)` in the round), or `-1` (derived from the final occurrence of `(13, 0)`)?  Or should we use both?\n",
-    "> For this session, if the same state-action pair appears multiple times in a round, you are encouraged to consider only the mini-round that begins at the first occurrence.  This yields a method known as **First-Visit** Monte Carlo with Exploring Starts.  (_Another option, that you are encouraged to explore later, is **Every-Visit** Monte Carlo with Exploring Starts._)  \n",
+    "For instance, in the first game round, after the robot selected action `0` when the game was in state `15`, it received a return of `-4`.\n",
+    "\n",
+    "And note that these games can also be used to estimate the entries in `Q` corresponding to other state-action pairs.  For instance, consider `Q[14,1]`.  Even though round `1` did not technically start with state `14` and action `1`, the mini-round obtained by removing `(15, 0)` proves particularly useful for estimating `Q[14,1]`.  In particular, the mini-round `[(14, 1), (14, 2), (15, 1)]` shows that after the robot selected action `1` when the game was in state `14`, the robot received a return of `-3`.\n",
+    "\n",
+    "Before describing the algorithm in full, it is necessary to talk about what should happen in the event that the same state-action pair appears in a round multiple times.  For instance, consider `(13, 0)` in round `2`.  Should we use a return of `-6` (taken from the first occurrence of `(13, 0)` in the round), or `-1` (derived from the final occurrence of `(13, 0)`)?  Or should we use both?\n",
+    "> For this session, if the same state-action pair appears multiple times in a round, you are encouraged to consider only the return that corresponds to the first occurrence.  This yields a method known as **First-Visit** Monte Carlo with Exploring Starts.  (_Another option, that you are encouraged to explore later, is **Every-Visit** Monte Carlo with Exploring Starts._)  \n",
     "\n",
     "So, in this case, the robot should set `Q[13,0]` to `-6` after round `2`.\n",
     "\n",
@@ -354,7 +356,7 @@
     "\n",
     "The method begins with an initial guess for the estimates in `Q`:\n",
     "```python\n",
-    "Q = -5*np.ones((nS, nA), dtype=float)   # initialize empty array\n",
+    "Q = -1*np.ones((nS, nA), dtype=float)   # initialize empty array\n",
     "```\n",
     "\n",
     "Of course, this initial estimate isn't so great, but the robot will learn quickly how to improve it!\n",
@@ -364,11 +366,11 @@
     "game_round = play_round(env, Q)         # play game round\n",
     "```\n",
     "\n",
-    "After each game round, you will record the effective scores obtained after visiting each state-action pair.  (In the case that the same state-action pair appears multiple times in a round, you should consider only the first occurrence.)  You will record this information in the dictionary `scores`, which is initialized towards the beginning of the function:  \n",
+    "After each game round, you will record the returns obtained after visiting each state-action pair.  (In the case that the same state-action pair appears multiple times in a round, you should consider only the first occurrence.)  You will record this information in the dictionary `scores`, which is initialized towards the beginning of the function:  \n",
     "```python\n",
     "scores = defaultdict(lambda: [])        # initialize dictionary of empty lists\n",
     "```\n",
-    "In particular, for each state-action pair `(s, a)` that appears in the round, append the effective final score to the list in `scores[s,a]`.  Then, you can use this list to update `Q[s,a]` to the average of the values in `scores[s,a]`.  \n",
+    "In particular, for each state-action pair `(s, a)` that appears in the round, append the return to the list in `scores[s,a]`.  Then, you can use this list to update `Q[s,a]` to the average of the values in `scores[s,a]`.  \n",
     "\n",
     "In case an example helps, we'll work with the example from the previous section, with three game rounds that began with the state-action pair `(15, 0)`.  In this case, we should have:\n",
     "- after round `1`, `scores[15,0]=[-4]`  \n",
@@ -384,11 +386,11 @@
     "# use game round to update Q\n",
     "for s, a in set(game_round):                                    # loop over state-action pairs\n",
     "    idx = min([i for i,x in enumerate(game_round) if x==(s,a)]) # obtain first index where pair appears\n",
-    "    # your code here                                            # append effective final score to scores[s,a]\n",
+    "    # your code here                                            # append return to scores[s,a]\n",
     "    # your code here                                            # set Q[s,a] to the mean of scores[s,a]\n",
     "```\n",
     "\n",
-    "You need only complete the two lines in the code snippet above to complete the implementation.  Once you have finished, run the code cell below to print your robot's estimated optimal policy after playing the game for `100` rounds.\n",
+    "**You need only complete the two lines in the code snippet above to complete the implementation.**  Once you have finished, run the code cell below to print your robot's estimated optimal policy after playing the game for `100` rounds.\n",
     "\n",
     "Next, you'll learn how to run the code in real time on your robot, to visualize how it learns!"
    ]
@@ -396,9 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -408,7 +408,7 @@
     "    nS = env.nS        # number of states\n",
     "    nA = env.nA        # number of actions\n",
     "    \n",
-    "    Q = -5*np.ones((nS, nA), dtype=float)   # initialize empty array\n",
+    "    Q = -1*np.ones((nS, nA), dtype=float)   # initialize empty array\n",
     "    scores = defaultdict(lambda: [])        # initialize dictionary of empty lists\n",
     "    \n",
     "    # loop over game rounds\n",
@@ -423,7 +423,7 @@
     "        # use game round to update Q\n",
     "        for s, a in set(game_round):                                    # loop over state-action pairs\n",
     "            idx = min([i for i,x in enumerate(game_round) if x==(s,a)]) # obtain first index where pair appears\n",
-    "            # your code here                                            # append effective final score to scores[s,a]\n",
+    "            # your code here                                            # append return to scores[s,a]\n",
     "            # your code here                                            # set Q[s,a] to the mean of scores[s,a]\n",
     "    return Q\n",
     "\n",
@@ -443,6 +443,19 @@
     "\n",
     "# print \n",
     "print('\\nCorrect: %d/16' % sum(np.argmax(Q, axis=1) == correct_policy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='watch'></a>\n",
+    "# Watch your robot learn!\n",
+    "\n",
+    "Edit the `monte_carlo` function in **gtc_arm.py** to match your implementation above.  Then, run the file:\n",
+    "```\n",
+    "sudo python gtc_arm.py\n",
+    "```"
    ]
   }
  ],
