most recent files

--- a/2_Reinforcement-Learning-Solution.ipynb
+++ b/2_Reinforcement-Learning-Solution.ipynb
@@ -111,31 +111,37 @@
      "output_type": "stream",
      "text": [
       "Starting Round 1 ...\n",
-      " LED: 1    | Arm: 0 | Score:    0 \n",
-      " Action: R | Arm: 1 | Score:   -1 \n",
-      " Action: R | Arm: 2 | Score:   -2 \n",
-      " Action: L | Arm: 1 | Score:   -3 \n",
-      " Action: P | Arm: 1 | Score:   -4 \n",
-      "FINAL SCORE:  -4\n",
+      " LED: 3    | Arm: 2 | Score:    0 \n",
+      " Action: R | Arm: 3 | Score:   -1 \n",
+      " Action: L | Arm: 2 | Score:   -2 \n",
+      " Action: P | Arm: 2 | Score:   -3 \n",
+      " Action: L | Arm: 1 | Score:   -4 \n",
+      " Action: L | Arm: 0 | Score:   -5 \n",
+      " Action: L | Arm: 0 | Score:   -6 \n",
+      " Action: L | Arm: 0 | Score:   -7 \n",
+      " Action: L | Arm: 0 | Score:   -8 \n",
+      " Action: P | Arm: 0 | Score:   -9 \n",
+      " Action: L | Arm: 0 | Score:  -10 \n",
+      " Action: L | Arm: 0 | Score:  -11 \n",
+      " Action: R | Arm: 1 | Score:  -12 \n",
+      " Action: R | Arm: 2 | Score:  -13 \n",
+      " Action: L | Arm: 1 | Score:  -14 \n",
+      " Action: L | Arm: 0 | Score:  -15 \n",
+      "FINAL SCORE:  -15\n",
       "-----------------------------------\n",
       "Starting Round 2 ...\n",
-      " LED: 0    | Arm: 1 | Score:    0 \n",
-      " Action: P | Arm: 1 | Score:   -1 \n",
-      " Action: R | Arm: 2 | Score:   -2 \n",
-      " Action: L | Arm: 1 | Score:   -3 \n",
-      " Action: P | Arm: 1 | Score:   -4 \n",
-      " Action: L | Arm: 0 | Score:   -5 \n",
-      " Action: R | Arm: 1 | Score:   -6 \n",
-      " Action: R | Arm: 2 | Score:   -7 \n",
-      " Action: P | Arm: 2 | Score:   -8 \n",
-      " Action: R | Arm: 3 | Score:   -9 \n",
-      " Action: R | Arm: 3 | Score:  -10 \n",
-      " Action: L | Arm: 2 | Score:  -11 \n",
-      " Action: L | Arm: 1 | Score:  -12 \n",
-      " Action: R | Arm: 2 | Score:  -13 \n",
-      " Action: R | Arm: 3 | Score:  -14 \n",
-      " Action: P | Arm: 3 | Score:  -15 \n",
-      "FINAL SCORE:  -15\n",
+      " LED: 0    | Arm: 0 | Score:    0 \n",
+      " Action: R | Arm: 1 | Score:   -1 \n",
+      " Action: L | Arm: 0 | Score:   -2 \n",
+      " Action: R | Arm: 1 | Score:   -3 \n",
+      " Action: R | Arm: 2 | Score:   -4 \n",
+      " Action: L | Arm: 1 | Score:   -5 \n",
+      " Action: L | Arm: 0 | Score:   -6 \n",
+      " Action: L | Arm: 0 | Score:   -7 \n",
+      " Action: L | Arm: 0 | Score:   -8 \n",
+      " Action: L | Arm: 0 | Score:   -9 \n",
+      " Action: P | Arm: 0 | Score:  -10 \n",
+      "FINAL SCORE:  -10\n",
       "-----------------------------------\n"
      ]
     }
@@ -345,9 +351,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Round 1: [(11, 1), (11, 1), (11, 2), (11, 1), (11, 1), (11, 0), (10, 2), (11, 1), (11, 0), (10, 0), (9, 0), (8, 1), (8, 0), (8, 2), (9, 2)] | Score: -15\n",
-      "Round 2: [(8, 0), (8, 1), (8, 0), (8, 0), (8, 2), (9, 2), (10, 0), (9, 2), (10, 1)] | Score: -9\n",
-      "Round 3: [(12, 2), (13, 2), (14, 1), (14, 1), (14, 1), (14, 0), (13, 1), (13, 2), (14, 1), (14, 2), (15, 0), (14, 2), (15, 2), (15, 2), (15, 2)] | Score: -15\n"
+      "Round 1: [(3, 0), (2, 1), (2, 0), (1, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 2), (1, 1), (1, 0), (0, 0), (0, 2), (1, 0), (0, 1)] | Score: -15\n",
+      "Round 2: [(3, 1), (3, 2), (3, 0), (2, 1), (2, 2), (3, 0), (2, 2), (3, 2), (3, 2), (3, 2), (3, 0), (2, 0), (1, 0), (0, 1)] | Score: -14\n",
+      "Round 3: [(12, 1), (12, 2), (13, 2), (14, 1), (14, 2), (15, 1)] | Score: -6\n"
      ]
     }
    ],
@@ -427,7 +433,7 @@
     "\n",
     "The method begins with an initial guess for the estimates in `Q`:\n",
     "```python\n",
-    "Q = -1*np.ones((nS, nA), dtype=float)   # initialize empty array\n",
+    "Q = -5*np.ones((nS, nA), dtype=float)   # initialize empty array\n",
     "```\n",
     "\n",
     "Of course, this initial estimate isn't so great, but the robot will learn quickly how to improve it!\n",
@@ -475,8 +481,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Game Round 100/100.\n",
-      "\n",
       "Estimated Optimal Policy:\n",
       "LED: 0 | Arm: 0 | State:  0 | Best Action: P\n",
       "LED: 0 | Arm: 1 | State:  1 | Best Action: L\n",
@@ -500,22 +504,17 @@
     }
    ],
    "source": [
-    "import sys\n",
     "from collections import defaultdict\n",
     "\n",
     "def monte_carlo(env, num_rounds=100):\n",
     "    nS = env.nS        # number of states\n",
     "    nA = env.nA        # number of actions\n",
     "    \n",
-    "    Q = -1*np.ones((nS, nA), dtype=float)   # initialize empty array\n",
+    "    Q = -5*np.ones((nS, nA), dtype=float)   # initialize empty array\n",
     "    scores = defaultdict(lambda: [])        # initialize dictionary of empty lists\n",
     "    \n",
     "    # loop over game rounds\n",
     "    for i_round in range(1, num_rounds+1):\n",
-    "        \n",
-    "        # monitor progress\n",
-    "        print(\"\\rGame Round {}/{}.\".format(i_round, num_rounds), end=\"\")\n",
-    "        sys.stdout.flush()\n",
     "        \n",
     "        game_round = play_round(env, Q)     # play game round\n",
     "        \n",
@@ -530,7 +529,7 @@
     "Q = monte_carlo(env)\n",
     "\n",
     "# print the estmated optimal policy\n",
-    "print('\\n\\nEstimated Optimal Policy:')\n",
+    "print('Estimated Optimal Policy:')\n",
     "correct_policy = [1, 0, 0, 0, 2, 1, 0, 0, 2, 2, 1, 0, 2, 2, 2, 1]\n",
     "for state in range(Q.shape[0]):\n",
     "    led, arm = get_led_and_arm(state, env.nLED)\n",
