--- a/2_Reinforcement-Learning.ipynb
+++ b/2_Reinforcement-Learning.ipynb
@@ -365,7 +365,7 @@
     "\n",
     "The method begins with an initial guess for the estimates in `Q`:\n",
     "```python\n",
-    "Q = -1*np.ones((nS, nA), dtype=float)   # initialize empty array\n",
+    "Q = -5*np.ones((nS, nA), dtype=float)   # initialize empty array\n",
     "```\n",
     "\n",
     "Of course, this initial estimate isn't so great, but the robot will learn quickly how to improve it!\n",
@@ -412,22 +412,17 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
     "from collections import defaultdict\n",
     "\n",
     "def monte_carlo(env, num_rounds=100):\n",
     "    nS = env.nS        # number of states\n",
     "    nA = env.nA        # number of actions\n",
     "    \n",
-    "    Q = -1*np.ones((nS, nA), dtype=float)   # initialize empty array\n",
+    "    Q = -5*np.ones((nS, nA), dtype=float)   # initialize empty array\n",
     "    scores = defaultdict(lambda: [])        # initialize dictionary of empty lists\n",
     "    \n",
     "    # loop over game rounds\n",
     "    for i_round in range(1, num_rounds+1):\n",
-    "        \n",
-    "        # monitor progress\n",
-    "        print(\"\\rGame Round {}/{}.\".format(i_round, num_rounds), end=\"\")\n",
-    "        sys.stdout.flush()\n",
     "        \n",
     "        game_round = play_round(env, Q)     # play game round\n",
     "        \n",
@@ -442,7 +437,7 @@
     "Q = monte_carlo(env)\n",
     "\n",
     "# print the estmated optimal policy\n",
-    "print('\\n\\nEstimated Optimal Policy:')\n",
+    "print('Estimated Optimal Policy:')\n",
     "correct_policy = [1, 0, 0, 0, 2, 1, 0, 0, 2, 2, 1, 0, 2, 2, 2, 1]\n",
     "for state in range(Q.shape[0]):\n",
     "    led, arm = get_led_and_arm(state, env.nLED)\n",
