--- a/1_Hardware-Components.ipynb
+++ b/1_Hardware-Components.ipynb
@@ -181,7 +181,7 @@
     "\n",
     "## Control GPIO pins with software\n",
     "\n",
-    "The low level hardware interface for the GPIO pins is controlled in user space through a pseudo file system in Linux called sysfs. Control of the pin must first be \"exported\" to user space from kernel space. After that, the direction and pin value can be accessed like any other file. On the Jetson TX2, pin 18 corresponds to gpio481, so the number that must be exported to control it is 481.\n",
+    "This information and the example below is only included for your reference, and is not required for the project. We will be using a library to achieve this functionality, as discussed in the next section. The low level hardware interface for the GPIO pins is controlled in user space through a pseudo file system in Linux called sysfs. Control of the pin must first be \"exported\" to user space from kernel space. After that, the direction and pin value can be accessed like any other file. On the Jetson TX2, pin 18 corresponds to gpio481, so the number that must be exported to control it is 481.\n",
     "\n",
     "![Control GPIO Pins](images/image1.png)\n",
     "\n",
